Update README.md to include easy running using runnable JARs